fix: nav on mobile devices

--- a/client/src/styles/nav.scss
+++ b/client/src/styles/nav.scss
@@ -13,7 +13,6 @@
   text-align: center;
   z-index: 99;
   @media (max-width: 48em) {
-    padding: 50px 40px;
     top: auto;
     bottom: 0;
     right: 0;
